charts/production/https-redirect.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: traefik-v2
spec:
  redirectScheme:
    scheme: https
    permanent: true
