charts/production/ingress-route-darta-works.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: my-ingressroute-darta-works
  namespace: minio
spec:
  entryPoints:
  - web
  - websecure
  routes:
  - match: Host(`darta.works`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: minio
      namespace: minio
      port: 443
    middlewares:
    - name: "https-redirect"
