charts/production/ingress-route-minio.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: my-ingressroute-minio
  namespace: minio-tenant
spec:
  entryPoints:
  - web
  - websecure
  routes:
  # Adding a rule for api.darta.works
  - match: Host(`darta.works`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: minio-console
      namespace: minio-tenant
      port: 9443
    middlewares:
    - name: "https-redirect"
  - match: Host(`api.darta.works`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: minio
      namespace: minio-tenant
      port: 443
    middlewares:
    - name: "https-redirect"
  tls:
    certResolver: myresolver
